Fix ellipsis color on truncated text

--- a/github-dark.css
+++ b/github-dark.css
@@ -727,7 +727,7 @@
   .navigation-focus .octicon:not(.octicon-arrow-right):not(.type-icon), .sunken-menu-group li:hover .octicon,
   .select-menu-item.select-menu-action > .octicon,.select-menu-item.selected > .octicon,.select-menu-item-text,
   .dashboard-tabs a.selected,.markdown-body h1, .markdown-body h2, .markdown-body h3, .markdown-body h4,
-  .dropdown-menu > li > a:hover >.octicon, .message .time, #graph_data .tab.selected a {
+  .dropdown-menu > li > a:hover >.octicon, .message .time, #graph_data .tab.selected a, .css-truncate {
     color: #eee !important;
   }
   /* slightly darker text */
